# CapstoneProjectAgenticAI

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
docs/: business_document_source.md
evals/: __init__.py  run_evals.py
evals/datasets/: golden_cases.yaml
evals/rubrics/: rubric.yaml
scripts/: generate_business_pdf.py
src/execlab/: __init__.py  agentic_reports.py  agents.py  analytics.py  causal.py  cloud_smoke.py  config.py  custom_algo.py  data.py  devtools.py  pretrade.py  risk.py  schedules.py  schemas.py  service.py  simulator.py
src/execlab/prompt/: few_shots.yaml
tests/: __init__.py  conftest.py  test_custom_algo_agentic.py  test_pretrade.py  test_schedules.py  test_service_integration.py  test_tca_and_scenario.py
